--- a/XamlBrewer.Windows.MouseCommandBar/XamlBrewer.Windows.MouseCommandBar.csproj
+++ b/XamlBrewer.Windows.MouseCommandBar/XamlBrewer.Windows.MouseCommandBar.csproj
@@ -134,8 +134,8 @@
     <None Include="XamlBrewer.Windows.MouseCommandBar_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Geronimo.jpg" />
     <Content Include="Assets\Logo.scale-100.png" />
-    <Content Include="Assets\MightyMouse.jpg" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
