--- a/XamlBrewer.Windows.MouseCommandBar/XamlBrewer.Windows.MouseCommandBar.csproj
+++ b/XamlBrewer.Windows.MouseCommandBar/XamlBrewer.Windows.MouseCommandBar.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Services\Device.cs" />
     <Compile Include="Services\InputMode.cs" />
     <Compile Include="ViewModels\CheeseViewModel.cs" />
+    <Compile Include="ViewModels\ItemViewModelBase.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\MainView.xaml.cs">
